--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	"type": "module",
 	"dependencies": {
 		"postcss-remove-unused-css": "^1.0.4",
-		"svelte-markdown": "^0.2.3"
+		"svelte-markdown": "^0.2.3",
+		"svelte-prism": "^1.1.6"
 	}
 }
